# jjl-gardening

./: .gitignore  PollSensors.js  datalogger.js  simpleServer.js
Sunroom2/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clangFormat.sh  extra_script.py  monitor.sh  platformio.ini  run_native_tests.sh  testNative.sh  uploadUart.sh  uploadViaEndpoint.sh
Sunroom2/docs/: LAST_FUNCTION_DESIGN.md  REFACTOR_RULE_PROCESSING.md  RULE_LANGUAGE.md
Sunroom2/docs/done/: REFACTOR_RULE_PROCESSING.md
Sunroom2/docs/tasks/: LAST_FUNCTION_DESIGN.md  PERSONAL_TASK_LIST.md  PIN_BASED_ACTUATORS.md  RELAY_SYSTEM_SIMPLIFICATION.md  UNIFY_VALUE_SYSTEMS.md  VARIANT_VALUE_SYSTEM.md
Sunroom2/docs/tasks/done/: FUNCTION_REGISTRY_REFACTOR.md  UNIFY_VALUE_SYSTEMS.md  VARIANT_VALUE_SYSTEM.md
Sunroom2/include/: env_barn.h  env_esp32s3.h  env_sunroom2.h
Sunroom2/preact/: OPTIMIZATION_GUIDE.md  README.md  jest.config.js  package-lock.json  package.json  preact.config.js  size-plugin.json  tsconfig.json  webpack.optimization.js
Sunroom2/preact/esp/: README.md  esp-build-plugin.js
Sunroom2/preact/src/: AutomateDialog.tsx  GlobalInfo.tsx  RelayControls.tsx  RestartButton.tsx  RuleParser.ts  SensorInfo.tsx  WifiForm.tsx  index.js  index.tsx  style.css  style.min.css  types.ts
Sunroom2/preact/src/__tests__/: RuleParser.test.ts
Sunroom2/preact/src/sections/: WifiForm.tsx  (+2 more)
Sunroom2/src/: analog_helpers.cpp  definitions.cpp  definitions.h  device_identity.cpp  ds18b20.cpp  interval_timer.cpp  interval_timer.h  json.cpp  json.h  main.cpp  peripheral_controls.cpp  peripheral_controls.h  pin_helpers.cpp  pin_helpers.h  preferences_helpers.cpp  preferences_helpers.h  rule_core.cpp  rule_core.h  rule_helpers.cpp  rule_helpers.h  sensor_value.h  servers.cpp  servers.h  system_info.cpp  system_info.h  system_status.cpp  system_status.h  temperatureMoisture.cpp  temperatureMoisture.h  time_helpers.cpp  time_helpers.h  units.h  wifi_helpers.cpp
Sunroom2/src/automation_dsl/: bridge.cpp  bridge_functions.cpp  bridge_functions.h  core.cpp  core.h  core_deprecated.cpp  core_deprecated.h  integration_test.cpp  new_bridge.cpp  new_core.cpp  new_core.h  registry_functions.cpp  registry_functions.h  registry_test.cpp  time_helpers.cpp  time_helpers.h  types.h  unified_value.h  value_tagged_union.h  value_types.h
Sunroom2/test/: README
Sunroom2/test/test_pin_helpers/: test_main.cpp
Sunroom2/test/test_relay_config/: test_main.cpp
Sunroom2/test/test_servers/: test_main.cpp
Sunroom2/tests_native/: README.md  bridge_integration_tests.cpp  function_registry_tests.cpp  rule_core_runner.cpp  rule_core_runner_deprecated.cpp  test_mocks.cpp  test_mocks.h  unified_value_tests.cpp
(+49 files in other folders)
